# django-nextjs-boilerplate

Backend/: .env example  README.md  manage.py  pyproject.toml
Backend/app_content/: urls.py  utils.py
Backend/app_content/gif/: views.py
Backend/app_content/podcast/: views.py
Backend/app_content/youtube/: views.py
Backend/common/authentication/: firebase_auth.py
Backend/common/models/: CommonModel.py
Backend/common/utils/: s3_manager.py
Backend/common/views/: CommonView.py
Backend/lovelyti/: asgi.py  settings.py  urls.py  wsgi.py
Backend/users/: admin.py  models.py  serializers.py  urls.py  utils.py  validators.py  views.py
Backend/users/migrations/: 0001_initial.py
Frontend/: .env example  .eslintrc.json  .gitignore  .prettierrc  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
Frontend/src/api/users/: index.ts
Frontend/src/app/: layout.tsx  page.tsx  providers.tsx
Frontend/src/app/dashboard/: layout.tsx  page.tsx
Frontend/src/components/accounts/: index.tsx
Frontend/src/components/charts/: steam.tsx
Frontend/src/components/common/: input.tsx
Frontend/src/components/home/: content.tsx
Frontend/src/components/hooks/: useBodyLock.ts
Frontend/src/components/navbar/: navbar.tsx  notifications-dropdown.tsx  user-dropdown.tsx
Frontend/src/components/session/: forgot-form.tsx  profile-form.tsx  register-form.tsx  signin-form.tsx
Frontend/src/components/sidebar/: collapse-items.tsx  companies-dropdown.tsx  sidebar-item.tsx  sidebar.tsx
Frontend/src/utils/constants/: CONSTANTS.ts  ROUTES.ts
(+18 files in other folders)
